--- a/Identification/matloader.ipynb
+++ b/Identification/matloader.ipynb
@@ -2,114 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "40a27ea2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import scipy.io as sio\n",
+    "import h5py\n",
+    "import os\n",
+    "import napari\n",
+    "from qtpy.QtWidgets import QSlider, QVBoxLayout, QWidget, QLabel\n",
+    "from qtpy.QtCore import Qt\n",
     "\n",
     "from DataViewer import DataViewer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "be28b812",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load names\n",
     "scan_name = 'Scan_4'\n",
-    "peak_pre = './DataOutput/Peaks_'\n",
-    "vol_pre = './DataOutput/Volume_'\n",
+    "peak_pre = 'Peaks_'\n",
+    "vol_pre = 'Volume_'\n",
+    "ext = '.mat'\n",
+    "folder = './DataOutput/'\n",
     "\n",
-    "peak_name = peak_pre + scan_name\n",
-    "vol_name = vol_pre + scan_name"
+    "peak_name = folder + peak_pre + scan_name + ext\n",
+    "vol_name = vol_pre+scan_name+'.h5'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ada87deb",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'Peaks_Scan_4.mat'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\Lab User\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\scipy\\io\\matlab\\_mio.py:39\u001b[0m, in \u001b[0;36m_open_file\u001b[1;34m(file_like, appendmat, mode)\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 39\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_like\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     40\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m     41\u001b[0m     \u001b[38;5;66;03m# Probably \"not found\"\u001b[39;00m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Peaks_Scan_4.mat'",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Load data\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m peak_dict \u001b[38;5;241m=\u001b[39m \u001b[43msio\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloadmat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpeak_name\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m.mat\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m vol_dict \u001b[38;5;241m=\u001b[39m sio\u001b[38;5;241m.\u001b[39mloadmat(vol_name\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.mat\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\Lab User\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\scipy\\io\\matlab\\_mio.py:233\u001b[0m, in \u001b[0;36mloadmat\u001b[1;34m(file_name, mdict, appendmat, spmatrix, **kwargs)\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     89\u001b[0m \u001b[38;5;124;03mLoad MATLAB file.\u001b[39;00m\n\u001b[0;32m     90\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    230\u001b[0m \u001b[38;5;124;03m    3.14159265+3.14159265j])\u001b[39;00m\n\u001b[0;32m    231\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    232\u001b[0m variable_names \u001b[38;5;241m=\u001b[39m kwargs\u001b[38;5;241m.\u001b[39mpop(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvariable_names\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m--> 233\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m _open_file_context(file_name, appendmat) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m    234\u001b[0m     MR, _ \u001b[38;5;241m=\u001b[39m mat_reader_factory(f, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m    235\u001b[0m     matfile_dict \u001b[38;5;241m=\u001b[39m MR\u001b[38;5;241m.\u001b[39mget_variables(variable_names)\n",
-      "File \u001b[1;32mc:\\Users\\Lab User\\AppData\\Local\\Programs\\Python\\Python310\\lib\\contextlib.py:135\u001b[0m, in \u001b[0;36m_GeneratorContextManager.__enter__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    133\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39margs, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mkwds, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfunc\n\u001b[0;32m    134\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 135\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mnext\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgen\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    136\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m:\n\u001b[0;32m    137\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgenerator didn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt yield\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Lab User\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\scipy\\io\\matlab\\_mio.py:17\u001b[0m, in \u001b[0;36m_open_file_context\u001b[1;34m(file_like, appendmat, mode)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;129m@contextmanager\u001b[39m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m_open_file_context\u001b[39m(file_like, appendmat, mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m---> 17\u001b[0m     f, opened \u001b[38;5;241m=\u001b[39m \u001b[43m_open_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_like\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mappendmat\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     19\u001b[0m         \u001b[38;5;28;01myield\u001b[39;00m f\n",
-      "File \u001b[1;32mc:\\Users\\Lab User\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\scipy\\io\\matlab\\_mio.py:45\u001b[0m, in \u001b[0;36m_open_file\u001b[1;34m(file_like, appendmat, mode)\u001b[0m\n\u001b[0;32m     43\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m appendmat \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m file_like\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.mat\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m     44\u001b[0m         file_like \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.mat\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m---> 45\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_like\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmode\u001b[49m\u001b[43m)\u001b[49m, \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m     46\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m     47\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mOSError\u001b[39;00m(\n\u001b[0;32m     48\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mReader needs file name or open file-like object\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     49\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01me\u001b[39;00m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'Peaks_Scan_4.mat'"
-     ]
-    }
-   ],
-   "source": [
-    "# Load data\n",
-    "peak_dict = sio.loadmat(peak_name+'.mat')\n",
-    "vol_dict = sio.loadmat(vol_name+'.mat')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e31280cc",
+   "execution_count": 34,
+   "id": "db06dc68",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'__header__': b'MATLAB 5.0 MAT-file, Platform: PCWIN64, Created on: Mon Sep 15 10:32:40 2025', '__version__': '1.0', '__globals__': [], 'peaks': array([[860, 300, 822],\n",
-      "       [822, 424, 828],\n",
-      "       [132, 794, 812],\n",
-      "       ...,\n",
-      "       [  2,  44, 420],\n",
-      "       [ 76,  52, 546],\n",
-      "       [ 32,  50, 668]], shape=(680, 3), dtype=uint16)}\n",
-      "{'__header__': b'MATLAB 5.0 MAT-file, Platform: PCWIN64, Created on: Mon Sep 15 10:32:40 2025', '__version__': '1.0', '__globals__': []}\n"
+      "Volume_Scan_4.h5\n",
+      "Keys: <KeysViewHDF5 ['dataFinal']>\n"
      ]
     }
    ],
    "source": [
-    "print(peak_dict)\n",
-    "print(vol_dict)"
+    "print(str(vol_name))\n",
+    "first_dir = os.getcwd()\n",
+    "\n",
+    "peak_dict = sio.loadmat(peak_name)\n",
+    "\n",
+    "os.chdir('DataOutput')\n",
+    "with h5py.File(vol_name, \"r\") as f:\n",
+    "    print(f'Keys: {f.keys()}')\n",
+    "    group = f['dataFinal'][:]\n",
+    "os.chdir(first_dir)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "22d1aef3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2, 0, 1] (2, 0, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "dog = [2,0,1]\n",
-    "meow = tuple(dog)\n",
-    "print(dog,meow)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "c1f5a9b3",
    "metadata": {},
    "outputs": [
@@ -117,82 +74,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
-      "[860 300 822]\n",
-      "[822 860 300]\n",
-      "(680, 3)\n",
-      "None\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "axes don't match array",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(np\u001b[38;5;241m.\u001b[39mshape(peaks))\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28mprint\u001b[39m(unordered_vol)\n\u001b[1;32m---> 16\u001b[0m vol \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtranspose\u001b[49m\u001b[43m(\u001b[49m\u001b[43munordered_vol\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mtuple\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mperm\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28mprint\u001b[39m(np\u001b[38;5;241m.\u001b[39mshape(vol))\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(np\u001b[38;5;241m.\u001b[39mshape(unordered_peaks))\n",
-      "File \u001b[1;32mc:\\Users\\Lab User\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\numpy\\_core\\fromnumeric.py:703\u001b[0m, in \u001b[0;36mtranspose\u001b[1;34m(a, axes)\u001b[0m\n\u001b[0;32m    630\u001b[0m \u001b[38;5;129m@array_function_dispatch\u001b[39m(_transpose_dispatcher)\n\u001b[0;32m    631\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mtranspose\u001b[39m(a, axes\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[0;32m    632\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    633\u001b[0m \u001b[38;5;124;03m    Returns an array with axes transposed.\u001b[39;00m\n\u001b[0;32m    634\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    701\u001b[0m \n\u001b[0;32m    702\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 703\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_wrapfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtranspose\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxes\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Lab User\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\numpy\\_core\\fromnumeric.py:57\u001b[0m, in \u001b[0;36m_wrapfunc\u001b[1;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[0;32m     54\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _wrapit(obj, method, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[0;32m     56\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 57\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m bound(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[0;32m     58\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m     59\u001b[0m     \u001b[38;5;66;03m# A TypeError occurs if the object does have such a method in its\u001b[39;00m\n\u001b[0;32m     60\u001b[0m     \u001b[38;5;66;03m# class, but its signature is not identical to that of NumPy's. This\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     64\u001b[0m     \u001b[38;5;66;03m# Call _wrapit from within the except clause to ensure a potential\u001b[39;00m\n\u001b[0;32m     65\u001b[0m     \u001b[38;5;66;03m# exception has a traceback chain.\u001b[39;00m\n\u001b[0;32m     66\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _wrapit(obj, method, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n",
-      "\u001b[1;31mValueError\u001b[0m: axes don't match array"
+      "[860 300 822] [822 860 300]\n",
+      "(852, 892, 922) (922, 852, 892)\n"
      ]
     }
    ],
    "source": [
     "# Refine data\n",
     "unordered_peaks = np.array(peak_dict.get('peaks'))\n",
-    "\n",
-    "unordered_vol = np.array(vol_dict.get('dataFinal'))\n",
-    "print(unordered_vol)\n",
+    "unordered_vol = np.array(group)\n",
     "\n",
     "perm = [2,0,1]\n",
     "peaks = unordered_peaks[:,perm]\n",
+    "volume = np.transpose(unordered_vol, tuple(perm))\n",
     "\n",
-    "print(unordered_peaks[0]) # [y,x,z]\n",
-    "print(peaks[0]) # [822,860,300]\n",
-    "\n",
-    "print(np.shape(peaks))\n",
-    "\n",
-    "print(unordered_vol)\n",
-    "vol = np.transpose(unordered_vol, tuple(perm))\n",
-    "\n",
-    "\n",
-    "print(np.shape(vol))\n",
-    "\n",
-    "print(np.shape(unordered_peaks))"
+    "print(unordered_peaks[0], peaks[0])\n",
+    "print(np.shape(unordered_vol), np.shape(volume))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0608681c",
+   "execution_count": 36,
+   "id": "7ec5604e",
    "metadata": {},
    "outputs": [],
    "source": [
-    ">>> import numpy as np\n",
-    ">>> a = np.array([[10, 20, 30, 40, 50],\n",
-    "...               [ 6,  7,  8,  9, 10]])\n",
-    ">>> permutation = [0, 4, 1, 3, 2]\n",
-    ">>> idx = np.empty_like(permutation)\n",
-    ">>> idx[permutation] = np.arange(len(permutation))\n",
-    ">>> a[:, idx]  # return a rearranged copy\n",
-    "array([[10, 30, 50, 40, 20],\n",
-    "       [ 6,  8, 10,  9,  7]])\n",
-    ">>> a[:] = a[:, idx]  # in-place modification of a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ffd6c13",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Cropped:(921,891,852) # [y,x,z]\n",
+    "viewer = napari.Viewer(ndisplay=3)\n",
+    "image_layer = viewer.add_image(volume, name='Volume', colormap='gray') # Plots in [z,y,x]\n",
+    "points_layer = viewer.add_points(peaks, size=10, face_color='red', name='Centers')\n",
     "\n",
-    "peaks_csv = np.loadmat(file_name) # [y,x,z]\n",
-    "peaks_unordered = peaks_csv.tolist()\n",
-    "peaks = peaks_unordered[2,0,1] # [z,y,x]"
+    "dock_widget = QWidget()\n",
+    "layout = QVBoxLayout()\n",
+    "\n",
+    "label_min = QLabel(\"Min Z\")\n",
+    "slider_min = QSlider(Qt.Horizontal)\n",
+    "slider_min.setMinimum(0)\n",
+    "slider_min.setMaximum(volume.shape[0]-1) # Uses z coord of data -1 to find max\n",
+    "slider_min.setValue(0)\n",
+    "\n",
+    "label_max = QLabel(\"Max Z\")\n",
+    "slider_max = QSlider(Qt.Horizontal)\n",
+    "slider_max.setMinimum(0)\n",
+    "slider_max.setMaximum(volume.shape[0]-1)\n",
+    "slider_max.setValue(volume.shape[0]-1)\n",
+    "\n",
+    "layout.addWidget(label_min)\n",
+    "layout.addWidget(slider_min)\n",
+    "layout.addWidget(label_max)\n",
+    "layout.addWidget(slider_max)\n",
+    "dock_widget.setLayout(layout)\n",
+    "viewer.window.add_dock_widget(dock_widget, area='bottom')\n",
+    "\n",
+    "def update_view():\n",
+    "    \n",
+    "    zmin = slider_min.value()\n",
+    "    zmax = slider_max.value()\n",
+    "\n",
+    "    # Clip points to slab\n",
+    "    filtered_points = peaks[(peaks[:, 0] >= zmin) & (peaks[:, 0] <= zmax)]\n",
+    "    points_layer.data = filtered_points  # z, y, x order\n",
+    "\n",
+    "    # Clip volume to slab\n",
+    "    filtered_data = volume[zmin:zmax+1, :, :]\n",
+    "    image_layer.data = np.pad(filtered_data, pad_width=[[zmin, volume.shape[0] - zmax - 1], [0, 0], [0, 0]], mode='constant', constant_values=0)\n",
+    "\n",
+    "slider_min.valueChanged.connect(update_view)\n",
+    "slider_max.valueChanged.connect(update_view)\n",
+    "update_view()  # initialize\n",
+    "\n",
+    "napari.run()"
    ]
   }
  ],
