Converted code to python

--- a/Identification/matloader.ipynb
+++ b/Identification/matloader.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 72,
    "id": "40a27ea2",
    "metadata": {},
    "outputs": [],
@@ -14,13 +14,14 @@
     "import napari\n",
     "from qtpy.QtWidgets import QSlider, QVBoxLayout, QWidget, QLabel\n",
     "from qtpy.QtCore import Qt\n",
+    "from scipy.ndimage import zoom\n",
     "\n",
     "from DataViewer import DataViewer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 73,
    "id": "be28b812",
    "metadata": {},
    "outputs": [],
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 74,
    "id": "db06dc68",
    "metadata": {},
    "outputs": [
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 75,
    "id": "c1f5a9b3",
    "metadata": {},
    "outputs": [
@@ -74,34 +75,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[860 300 822] [822 860 300]\n",
-      "(852, 892, 922) (922, 852, 892)\n"
+      "(680, 3) (852, 892, 922)\n"
      ]
     }
    ],
    "source": [
-    "# Refine data\n",
     "unordered_peaks = np.array(peak_dict.get('peaks'))\n",
     "unordered_vol = np.array(group)\n",
     "\n",
-    "perm = [2,0,1]\n",
-    "peaks = unordered_peaks[:,perm]\n",
-    "volume = np.transpose(unordered_vol, tuple(perm))\n",
-    "\n",
-    "print(unordered_peaks[0], peaks[0])\n",
-    "print(np.shape(unordered_vol), np.shape(volume))"
+    "print(np.shape(unordered_peaks), np.shape(unordered_vol))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 76,
+   "id": "e74f25b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(680, 3) (852, 892, 922)\n"
+     ]
+    }
+   ],
+   "source": [
+    "perm = [2,0,1]\n",
+    "peaks = unordered_peaks[:,perm]\n",
+    "volume = np.transpose(unordered_vol, tuple(perm))\n",
+    "\n",
+    "print(np.shape(unordered_peaks), np.shape(unordered_vol))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "a26ff9f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adjust_peaks = np.copy(peaks)\n",
+    "adjust_vol = np.copy(volume)\n",
+    "scale = 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "e6ab6203",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "downscale_vol = zoom(adjust_vol, (scale,scale,scale))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "943a0077",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(922, 852, 892)\n",
+      "(461, 426, 446)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.shape(volume))\n",
+    "print(np.shape(downscale_vol))\n",
+    "peaks = peaks.astype(float)\n",
+    "\n",
+    "adjust_vol[:, 1] *= 0.5\n",
+    "adjust_vol[:, 2] *= 0.5\n",
+    "volume = downscale_vol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "99d28a4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "volume = np.copy(adjust_vol)\n",
+    "adjust = np.copy(peaks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "id": "7ec5604e",
    "metadata": {},
    "outputs": [],
    "source": [
     "viewer = napari.Viewer(ndisplay=3)\n",
     "image_layer = viewer.add_image(volume, name='Volume', colormap='gray') # Plots in [z,y,x]\n",
-    "points_layer = viewer.add_points(peaks, size=10, face_color='red', name='Centers')\n",
+    "points_layer = viewer.add_points(adjust, size=10, face_color='red', name='Centers')\n",
     "\n",
     "dock_widget = QWidget()\n",
     "layout = QVBoxLayout()\n",
@@ -131,7 +205,7 @@
     "    zmax = slider_max.value()\n",
     "\n",
     "    # Clip points to slab\n",
-    "    filtered_points = peaks[(peaks[:, 0] >= zmin) & (peaks[:, 0] <= zmax)]\n",
+    "    filtered_points = adjust[(adjust[:, 0] >= zmin) & (adjust[:, 0] <= zmax)]\n",
     "    points_layer.data = filtered_points  # z, y, x order\n",
     "\n",
     "    # Clip volume to slab\n",
