--- a/Identification/basicProcessor.ipynb
+++ b/Identification/basicProcessor.ipynb
@@ -2,16 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "db80cb09",
    "metadata": {},
    "outputs": [],
    "source": [
     "import h5py\n",
+    "import math\n",
     "\n",
     "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "from scipy.ndimage import median_filter"
+    "from scipy.ndimage import median_filter, gaussian_filter\n",
+    "from skimage import exposure"
    ]
   },
   {
@@ -24,8 +27,11 @@
     "filePath = r\"./Scan_162.hdf5\"\n",
     "dataPath = f'/RawData/Scan_162'\n",
     "\n",
+    "# Import data\n",
     "with h5py.File(filePath,'r') as f: \n",
     "    data = f[dataPath][()] # (slices, rows, width)\n",
+    "\n",
+    "# Choose correct coordinates & crop\n",
     "data = np.transpose(data,[1,2,0]) # (rows, width, slices)\n",
     "dataCropped = data[150:1100,50:970,:]\n",
     "cR, cW, cZ = np.shape(dataCropped)"
@@ -57,13 +63,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create mean column array\n",
     "meanPerCol = np.mean(dataCropped,axis=(1,2))\n",
     "meanCenterRow = meanPerCol[math.floor(cR/2)]\n",
     "scales = meanCenterRow/meanPerCol\n",
     "\n",
+    "# Normalize\n",
     "dataColNorm = dataCropped*scales[:, np.newaxis, np.newaxis]\n",
     "dataNorm = np.clip(exposure.rescale_intensity(dataColNorm, in_range='image', out_range=(0,1)), 0, 1)\n",
     "\n",
+    "# Sharpen\n",
     "blurred = gaussian_filter(dataNorm, sigma=3)\n",
     "strength = 0.2\n",
     "dataSharp = np.clip(dataNorm + strength * blurred, 0, 1)"
@@ -76,6 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plot process\n",
     "fig, axs = plt.subplots(1, 4, figsize=(16, 4)) \n",
     "ax1, ax2, ax3, ax4 = axs.flatten()\n",
     "\n",
@@ -110,8 +120,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
