--- a/Identification/PreProcessing/refiner.ipynb
+++ b/Identification/PreProcessing/refiner.ipynb
@@ -19,6 +19,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9e0e15de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filePath = r\"Data/downscale_17.hdf5\"\n",
+    "dataPath = r'default'\n",
+    "\n",
+    "with h5py.File(filePath,'r') as f: \n",
+    "    print(f.keys())\n",
+    "    data = f[dataPath][()] # (slices, rows, width)\n",
+    "    rescaleData = data.reshape(f.attrs[\"shape\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "id": "028f52cb",
    "metadata": {},
