Added modern docstring to chunkor, implemented basic fft conv ifft pipeline

--- a/Identification/Detection/debtor.ipynb
+++ b/Identification/Detection/debtor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "id": "32876e64",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "<module 'Helpers' from 'c:\\\\Users\\\\Lab User\\\\Desktop\\\\temp1\\\\Granular-Compression\\\\Identification\\\\Helpers\\\\__init__.py'>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,14 +32,14 @@
     "\n",
     "\n",
     "from Helpers import loadData, multiplot, sphereMask, dataSizes, chunkor\n",
-    "importlib.reload(sys.modules['Helpers.sphereMask'])\n",
+    "importlib.reload(sys.modules['Helpers.chunkor'])\n",
     "importlib.reload(sys.modules['Helpers.dataSizes'])\n",
     "importlib.reload(sys.modules['Helpers'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "47794fe5",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "bc8b656b",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "8f0a0e53",
    "metadata": {},
    "outputs": [
@@ -165,11 +165,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Reserved</th>\n",
-       "      <td>0.23</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Allocated</th>\n",
-       "      <td>0.22</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -178,8 +178,8 @@
       "text/plain": [
        "            VRam\n",
        "Total      11.99\n",
-       "Reserved    0.23\n",
-       "Allocated   0.22"
+       "Reserved    0.00\n",
+       "Allocated   0.00"
       ]
      },
      "metadata": {},
@@ -187,7 +187,47 @@
     }
    ],
    "source": [
-    "chunks = chunkor(data,kernel)"
+    "pchunks, pkern  = chunkor(data,kernel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "3a836f96",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "The size of tensor a (185) must match the size of tensor b (65) at non-singleton dimension 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 12\u001b[0m\n\u001b[0;32m      9\u001b[0m fgChunk \u001b[38;5;241m=\u001b[39m fft\u001b[38;5;241m.\u001b[39mrfftn(gChunk)\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m gChunk\n\u001b[1;32m---> 12\u001b[0m fgChunk \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m=\u001b[39m fgKern\n\u001b[0;32m     13\u001b[0m gChunk \u001b[38;5;241m=\u001b[39m fft\u001b[38;5;241m.\u001b[39mifftn(fgChunk)\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m fgChunk\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: The size of tensor a (185) must match the size of tensor b (65) at non-singleton dimension 2"
+     ]
+    }
+   ],
+   "source": [
+    "gKern = pkern.cuda()\n",
+    "fgKern = fft.rfftn(gKern)\n",
+    "del gKern\n",
+    "\n",
+    "convMaps = []\n",
+    "for chunk in pchunks:\n",
+    "\n",
+    "    gChunk = chunk.cuda()\n",
+    "    fgChunk = fft.rfftn(gChunk)\n",
+    "    del gChunk\n",
+    "\n",
+    "    fgChunk *= fgKern\n",
+    "    gChunk = fft.ifftn(fgChunk)\n",
+    "    del fgChunk\n",
+    "\n",
+    "    chunk = gChunk.cpu()\n",
+    "    del gChunk\n",
+    "\n",
+    "    convMaps.append(chunk)"
    ]
   },
   {
