Attempted to work out proper slicing for parity, too tired to complete

--- a/Identification/Detection/debtor.ipynb
+++ b/Identification/Detection/debtor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "id": "32876e64",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "<module 'Helpers' from 'c:\\\\Users\\\\Lab User\\\\Desktop\\\\temp1\\\\Granular-Compression\\\\Identification\\\\Helpers\\\\__init__.py'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,13 +39,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "id": "47794fe5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(411, 511, 545)\n"
+     ]
+    }
+   ],
    "source": [
     "folderData = os.path.join(os.path.dirname(parent),'Data')\n",
-    "data = loadData(location=folderData, fileName='downscale_17.hdf5')"
+    "data = loadData(location=folderData, fileName='downscale_17.hdf5')\n",
+    "a,b,c = data.shape\n",
+    "data = data[:a-1,:b-1,:c-1]\n",
+    "print(data.shape)"
    ]
   },
   {
@@ -61,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "id": "ef781d8f",
    "metadata": {},
    "outputs": [
@@ -102,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 48,
    "id": "bc8b656b",
    "metadata": {},
    "outputs": [
@@ -121,7 +132,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
+   "id": "9979ff57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(411, 511, 545)\n",
+      "(65, 65, 65)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.shape)\n",
+    "print(kernel.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "id": "8f0a0e53",
    "metadata": {},
    "outputs": [
@@ -165,11 +196,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Reserved</th>\n",
-       "      <td>0.00</td>\n",
+       "      <td>1.31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Allocated</th>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.26</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -178,8 +209,8 @@
       "text/plain": [
        "            VRam\n",
        "Total      11.99\n",
-       "Reserved    0.00\n",
-       "Allocated   0.00"
+       "Reserved    1.31\n",
+       "Allocated   0.26"
       ]
      },
      "metadata": {},
@@ -187,7 +218,151 @@
     }
    ],
    "source": [
-    "pchunks, pkern  = chunkor(data,kernel)"
+    "pchunks, pkern = chunkor(data,kernel)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "e3001a37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[475 351 368]\n",
+      "[129 129 129]\n",
+      "[173.  111.  119.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dsz = np.array(pchunks[0].numpy().shape)\n",
+    "ksz = np.array(pkern.numpy().shape)\n",
+    "print(dsz)\n",
+    "print(ksz)\n",
+    "pads = (dsz-ksz)/2\n",
+    "print(pads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "34e46853",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([476, 352, 369])\n",
+      "torch.Size([476, 352, 369])\n",
+      "torch.Size([476, 352, 369])\n",
+      "torch.Size([476, 352, 369])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for c in pchunks:\n",
+    "    print(c.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e6c10390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blank = torch.zeros(pchunks[0].shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "b8cf13e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([476, 352, 369])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(blank.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "bd176a19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gKern = pkern.cuda()\n",
+    "fgKern = fft.rfftn(gKern)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "b78fc925",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([129, 129, 129])\n",
+      "torch.Size([129, 129, 65])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gKern.shape)\n",
+    "print(fgKern.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "ff3c1a65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[ 28835655.0000+0.0000j, -23123367.0900-563244.6906j,\n",
+      "           10623119.1617+517828.3643j],\n",
+      "         [-23123367.0900-563244.6906j,  18238077.1508+889022.6604j,\n",
+      "           -7706751.6040-564061.5145j],\n",
+      "         [ 10623119.1617+517828.3643j,  -7706751.6040-564061.5145j,\n",
+      "            1741764.5604+170210.5165j]],\n",
+      "\n",
+      "        [[-23123367.0900-563244.6906j,  18238077.1508+889022.6604j,\n",
+      "           -7706751.6040-564061.5145j],\n",
+      "         [ 18238077.1508+889022.6604j, -14090304.2189-1031277.3455j,\n",
+      "            5296017.6699+517542.9122j],\n",
+      "         [ -7706751.6040-564061.5145j,   5296017.6699+517542.9122j,\n",
+      "            -488236.8149-59746.7946j]],\n",
+      "\n",
+      "        [[ 10623119.1617+517828.3643j,  -7706751.6040-564061.5145j,\n",
+      "            1741764.5604+170210.5165j],\n",
+      "         [ -7706751.6040-564061.5145j,   5296017.6699+517542.9122j,\n",
+      "            -488236.8149-59746.7946j],\n",
+      "         [  1741764.5604+170210.5165j,   -488236.8149-59746.7946j,\n",
+      "           -1741682.4891-256322.5392j]]], device='cuda:0',\n",
+      "       dtype=torch.complex128)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fgKern[:3,:3,:3])"
    ]
   },
   {
